--- a/src/mas_project/crews/firefighter_services/config/tasks.yaml
+++ b/src/mas_project/crews/firefighter_services/config/tasks.yaml
@@ -1,22 +1,18 @@
 read_firefighter_units:
   description: >
     Read a list of firefighter units from the json file {json_file}.
-  expected_output: "..."
-  agent: reader
-exclude_firefighter_unit:
-  description: >
+    Take the list from the firefighter units reader response.
     Fires with high severity can only be handled by trucks.
     Fires with gas type can only be handled by trucks.
     Fires with simple type or low severity can be handled by cars. 
-    Take the list from the firefighter units reader response and check
-    which units can respond to the given fire event with fire type {fire_type}
-    and severity set to {fire_severity}.
+    Check which units can respond to the given fire event with fire type
+    {fire_type} and severity set to {fire_severity}.
     Exclude from the list those who cannot respond to the fire event.
   expected_output: "..."
-  agent: dispatcher
+  agent: reader
 dispatch_firefighter_unit:
   description: >
-    Take the updated list without the excluded firefighter units.
+    Take the response from the reader.
     For every unit available in the updated list calculate its distance 
     to the fire event using the RouteDistanceTool.
     You should pass to the tool as x_origin, y_origin the coordinates of the
@@ -24,5 +20,6 @@ dispatch_firefighter_unit:
     fire event (x={location_x}, y={location_y}).
     Return the uid of the unit that has the smaller distance to the fire event
     and can respond to this fire type and severity.
+    Ask human if the response is acceptable.
   expected_output: "..."
   agent: dispatcher
